@@ -47,6 +47,10 @@ httpclient.proxy-autodetect=true
 #httpclient.proxy-host=
 #httpclient.proxy-port=
 
+# TCP window size hints for kernel 
+#httpclient.socket-receive-buffer=65536
+#httpclient.socket-send-buffer=65536
+
 ###
 # File/Object comparison properties
 ###
