@@ -298,7 +298,7 @@ public abstract class S3Service implements Serializable {
         // If we are using an alternative hostname, include the hostname/bucketname in the resource path.
         String virtualBucketPath = "";
         if (!Constants.S3_HOSTNAME.equals(hostname)) {
-            int subdomainOffset = hostname.indexOf(".s3.amazonaws.com");
+            int subdomainOffset = hostname.indexOf("." + Constants.S3_HOSTNAME);
             if (subdomainOffset > 0) {
                 // Hostname represents an S3 sub-domain, so the bucket's name is the CNAME portion
                 virtualBucketPath = hostname.substring(0, subdomainOffset) + "/";                    
@@ -1402,7 +1402,7 @@ public abstract class S3Service implements Serializable {
      */
     public long adjustTime() throws Exception {
         // Connect to an AWS server to obtain response headers.
-        URL url = new URL("http://s3.amazonaws.com/");
+        URL url = new URL("http://" + Constants.S3_HOSTNAME + "/");
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.connect();
 
